- added break on exception in debugger
- added regex expression in the Find dialog
- added "Find Text at Caret" and modified menu shortcut for "Find Previous"
- added invalid character literal detection

- improved caret jump to position by centering the text
- improved syntax coloring to match more of ANTLR 3 specification (label, tokens block, etc)
- improved rule folding: can now fold using the bottom anchor
- re-introduced actions folding (anchors can be disabled in the preferences)
- improved Go To Rule: ignore case and display typed text in red if no match found
- build and debug/debug: the starting rule pop-up menu has been moved to the input text dialog

- hide and disable ideas during debugging
- display a message if the syntax diagram cannot be displayed
- display warning message if ANTLR 2.x grammars detected

- fixed a bug where the undo/redo menu item title would not display the correct action name
- fixed a bug in the Find dialog where some pattern would cause an exception (didn't quote in the regex)
- fixed a bug which would prevent drag and drop of rules to work on Windows
- fixed a bug where not all messages would be displayed in the console (added group "idle")

Version 1.0ea4 - 10/22/05

- find and replace
- ideas actions
- rule folding (experimental)
- duplicates rules are now underlined in blue
- undefined rules are now underlined in red
- rules can now be grouped and displayed in a tree view
- auto-indentation (enabled also on ':', '|' and ';' characters)
- show decision DFA (using DOT tool defined in the preferences)
- replace literal with token label
- remove left recursion (one or all)
- insert rule from template

- new analysis column displaying the location and kind of errors and warnings
- support Perforce SCM commands
- console moved from Window menu to project's window
- improved console with events list
- refactored the main menu bar
- remove collapse/expand actions - will reintroduce that later on