@@ -1,14 +1,6 @@
-- Windows: check debugging - doesn't work
+- check build & debug on Windows/Linux (remove then the System.out.println in DebuggerLocal)
 - error in parser should be detected in the debugger (see "HELO" with smtp.g)
-
-- Prefs: why is the window resized when applying the prefs
-- hashcode for action dependent on action # inside rule (see calc_1.g where two same action
-  cannot be distinguised)
-
-- see why output pane in debugger is always collapsed when window is created
-- don't have focus the first time AW is launched
-
-- show nfa decision: go backward to find enclosing decision (':' or '(')
+- Prefs: why is the window resized when applying the prefs on Windows (check on Linux too)
 
 - contextual menus on rules to group using selected rules (do not rely on text selection)
 - ideas: undefined rule: rename rule, delete token
