@@ -56,9 +56,11 @@ public class EditorMenu implements XJMenuItemDelegate, XJNotificationObserver {
 
     // View
     public static final int MI_EXPAND_COLLAPSE_RULE = 20;
-    public static final int MI_EXPAND_COLLAPSE_ACTION = 21;
-    public static final int MI_EXPAND_ALL_ACTION = 22;
-    public static final int MI_COLLAPSE_ALL_ACTION = 23;
+    public static final int MI_EXPAND_ALL_RULES = 21;
+    public static final int MI_COLLAPSE_ALL_RULES = 22;
+    public static final int MI_EXPAND_COLLAPSE_ACTION = 23;
+    public static final int MI_EXPAND_ALL_ACTIONS = 24;
+    public static final int MI_COLLAPSE_ALL_ACTIONS = 25;
 
     // Find
     public static final int MI_FIND = 30;
@@ -303,11 +305,13 @@ public class EditorMenu implements XJMenuItemDelegate, XJNotificationObserver {
 
         XJMenu folding = new XJMenu();
         folding.setTitle("Folding");
-        folding.addItem(new XJMenuItem("Expand/Collapse Rule", 'r', KeyEvent.VK_PERIOD, MI_EXPAND_COLLAPSE_RULE, this));
-        folding.addItem(new XJMenuItem("Expand/Collapse Action", 's', KeyEvent.VK_MINUS, MI_EXPAND_COLLAPSE_ACTION, this));
+        folding.addItem(new XJMenuItem("Toggle Rule", 't', KeyEvent.VK_PERIOD, MI_EXPAND_COLLAPSE_RULE, this));
+        folding.addItem(new XJMenuItem("Expand All Rules", 'e', KeyEvent.VK_PLUS, XJMenuItem.getKeyModifier() | Event.SHIFT_MASK, MI_EXPAND_ALL_RULES, this));
+        folding.addItem(new XJMenuItem("Collapse All Rules", 'c', KeyEvent.VK_MINUS, XJMenuItem.getKeyModifier() | Event.SHIFT_MASK, MI_COLLAPSE_ALL_RULES, this));
         folding.addSeparator();
-        folding.addItem(new XJMenuItem("Expand All Actions", '+', KeyEvent.VK_PLUS, XJMenuItem.getKeyModifier() | Event.SHIFT_MASK, MI_EXPAND_ALL_ACTION, this));
-        folding.addItem(new XJMenuItem("Collapse All Actions", '-', KeyEvent.VK_MINUS, XJMenuItem.getKeyModifier() | Event.SHIFT_MASK, MI_COLLAPSE_ALL_ACTION, this));
+        folding.addItem(new XJMenuItem("Toggle Action", 'a', KeyEvent.VK_MINUS, MI_EXPAND_COLLAPSE_ACTION, this));
+        folding.addItem(new XJMenuItem("Expand All Actions", 'x', KeyEvent.VK_PLUS, XJMenuItem.getKeyModifier() | Event.ALT_MASK, MI_EXPAND_ALL_ACTIONS, this));
+        folding.addItem(new XJMenuItem("Collapse All Actions", 'o', KeyEvent.VK_MINUS, XJMenuItem.getKeyModifier() | Event.ALT_MASK, MI_COLLAPSE_ALL_ACTIONS, this));
         
         menu.addSeparator();
         menu.addItem(folding);
@@ -377,9 +381,11 @@ public class EditorMenu implements XJMenuItemDelegate, XJNotificationObserver {
             case MI_GROUP:
             case MI_UNGROUP:
             case MI_EXPAND_COLLAPSE_RULE:
+            case MI_EXPAND_ALL_RULES:
+            case MI_COLLAPSE_ALL_RULES:
             case MI_EXPAND_COLLAPSE_ACTION:
-            case MI_EXPAND_ALL_ACTION:
-            case MI_COLLAPSE_ALL_ACTION:
+            case MI_EXPAND_ALL_ACTIONS:
+            case MI_COLLAPSE_ALL_ACTIONS:
             case MI_CHECK_GRAMMAR:
             case MI_FIND:
             case MI_RUN_INTERPRETER:
@@ -476,15 +482,23 @@ public class EditorMenu implements XJMenuItemDelegate, XJNotificationObserver {
                 editor.actionsView.expandCollapseRule();
                 break;
 
+            case MI_EXPAND_ALL_RULES:
+                editor.actionsView.expandAllRules();
+                break;
+
+            case MI_COLLAPSE_ALL_RULES:
+                editor.actionsView.collapseAllRules();
+                break;
+
             case MI_EXPAND_COLLAPSE_ACTION:
                 editor.actionsView.expandCollapseAction();
                 break;
 
-            case MI_EXPAND_ALL_ACTION:
+            case MI_EXPAND_ALL_ACTIONS:
                 editor.actionsView.expandAllActions();
                 break;
 
-            case MI_COLLAPSE_ALL_ACTION:
+            case MI_COLLAPSE_ALL_ACTIONS:
                 editor.actionsView.collapseAllActions();
                 break;
         }
