@@ -12,10 +12,13 @@ Version 1.0ea5 - 11/08/05
 
 - improved caret jump to position by centering the text
 - improved syntax coloring to match more of ANTLR 3 specification (label, tokens block, etc)
+- improved display decision NFA: doesn't require an exact caret position anymore
 - improved rule folding: can now fold using the bottom anchor
 - re-introduced actions folding (anchors can be disabled in the preferences)
+- expand or collapse all rules or actions
 - improved Go To Rule: ignore case and display typed text in red if no match found
 - build and debug/debug: the starting rule pop-up menu has been moved to the input text dialog
+- improved the build & debug feature to include the ANTLRWorks jar itself in the classpath
 
 - hide and disable ideas during debugging
 - display a message if the syntax diagram cannot be displayed
